# meeting-assistant

./: Cargo.toml
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src/audio-player/: provider.tsx  timeline.tsx
apps/desktop/src/calendar/: local-oauth.ts
apps/desktop/src/folders/: index.tsx
apps/desktop/src/instruction/: index.tsx
apps/desktop/src/main2/: profile-menu.tsx
apps/desktop/src/onboarding/: calendar.tsx  config.tsx  index.tsx
apps/desktop/src/shared/: chat-cta.tsx  useTabsShortcuts.tsx
apps/desktop/src/stt/: transcript-markdown.test.ts  transcript-markdown.ts  useSTTConnection.ts
crates/calendar/: Cargo.toml
crates/calendar/src/: error.rs  fetch.rs  lib.rs
crates/file/src/: lib.rs
crates/whisper-local-model/src/: lib.rs
plugins/calendar/: Cargo.toml  build.rs
plugins/calendar/js/: bindings.gen.ts
plugins/calendar/permissions/: default.toml
plugins/calendar/permissions/autogenerated/: reference.md
plugins/calendar/permissions/autogenerated/commands/: begin_loopback_oauth.toml  begin_oauth.toml  complete_oauth.toml  disconnect_oauth_account.toml  list_oauth_accounts.toml
plugins/calendar/permissions/schemas/: schema.json
plugins/calendar/src/: commands.rs  lib.rs  oauth.rs
plugins/deeplink2/js/: bindings.gen.ts
plugins/deeplink2/src/: lib.rs
plugins/deeplink2/src/server/: mod.rs
plugins/deeplink2/src/types/: calendar_oauth_callback.rs  mod.rs
plugins/local-stt/js/: bindings.gen.ts
plugins/local-stt/src/: commands.rs  error.rs  ext.rs  lib.rs  model.rs
(+42 files in other folders)
