[package]
name = "tauri-plugin-calendar"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-calendar"
description = ""

[dependencies]
hypr-calendar = { workspace = true, features = ["specta"] }
hypr-calendar-interface = { workspace = true }
hypr-storage = { workspace = true }

tauri = { workspace = true, features = ["test"] }
tauri-plugin-auth = { workspace = true }
tauri-plugin-permissions = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
specta = { workspace = true, features = ["chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "time"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }
